edits, add dark mode

--- a/quarto/derivatives/curve_sketching.qmd
+++ b/quarto/derivatives/curve_sketching.qmd
@@ -12,7 +12,7 @@ using Plots
 plotly()
 using SymPy
 using Roots
-using Polynomials # some name clash with SymPy
+import Polynomials: variable, Polynomial, RationalFunction # avoid name clash
 ```
 
 
@@ -162,8 +162,8 @@ This sort of analysis can be automated. The plot "recipe" for polynomials from t
 
 
 ```{julia}
-xₚ = variable(Polynomial)
-plot(f(xₚ))   # f(xₚ) of Polynomial type
+𝐱 = variable(Polynomial)
+plot(f(𝐱))   # f(𝐱) of Polynomial type
 ```
 
 ##### Example
@@ -219,8 +219,8 @@ Again, this sort of analysis can be systematized. The rational function type in 
 
 
 ```{julia}
-xᵣ = variable(RationalFunction)
-plot(f(xᵣ))  # f(x) of RationalFunction type
+𝐱 = variable(RationalFunction)
+plot(f(𝐱))  # f(x) of RationalFunction type
 ```
 
 ##### Example
