--- a/quarto/derivatives/first_second_derivatives.qmd
+++ b/quarto/derivatives/first_second_derivatives.qmd
@@ -162,9 +162,10 @@ This question can be answered by considering the first derivative.
 
 > *The first derivative test*: If $c$ is a critical point for $f(x)$ and *if* $f'(x)$ changes sign at $x=c$, then $f(c)$ will be either a relative maximum or a relative minimum.
 >
->   * It will be a relative maximum if the derivative changes sign from $+$ to $-$.
->   * It will be a relative minimum if the derivative changes sign from $-$ to $+$.
->   * If $f'(x)$ does not change sign at $c$, then $f(c)$ is *not* a relative maximum or minimum.
+>   * $f$ will have  a relative maximum at $c$ if the derivative changes sign from $+$ to $-$.
+>   * $f$ will have  a relative minimum at $c$ if the derivative changes sign from $-$ to $+$.
+>
+>   Further,  If $f'(x)$ does *not* change sign at $c$, then $f$ will  *not* have a relative maximum or minimum at $c$.
 
 
 
@@ -185,7 +186,7 @@ f(x) = exp(-abs(x)) * cos(pi * x)
 plotif(f, f', -3, 3)
 ```
 
-We can see the first derivative test in action: at the peaks and valleys – the relative extrema – the color changes. This is because $f'$ is changing sign as the function changes from increasing to decreasing or vice versa.
+We can see the first derivative test in action: at the peaks and valleys – the relative extrema – the highlighting changes. This is because $f'$ is changing sign as the function changes from increasing to decreasing or vice versa.
 
 
 This function has a critical point at $0$, as can be seen. It corresponds to a point where the derivative does not exist. It is still identified through `find_zeros`, which picks up zeros and in case of discontinuous functions, like `f'`, zero crossings:
@@ -493,8 +494,8 @@ Concave up functions are "opening" up, and often clearly $U$-shaped, though that
 
 > The **second derivative test**: If $c$ is a critical point of $f(x)$ with $f''(c)$ existing in a neighborhood of $c$, then
 >
->   * The value $f(c)$ will be a relative maximum if $f''(c) > 0$,
->   * The value $f(c)$ will be a relative minimum if $f''(c) < 0$, and
+>   * $f$ will have a relative maximum at the critical point $c$ if $f''(c) > 0$,
+>   * $f$ will have a relative minimum at the critical point $c$ if $f''(c) < 0$, and
 >   * *if* $f''(c) = 0$ the test is *inconclusive*.
 
 
