--- a/quarto/derivatives/linearization.qmd
+++ b/quarto/derivatives/linearization.qmd
@@ -40,7 +40,11 @@ tangent(f, c) = x -> f(c) + f'(c) * (x - c)
 (Recall, the `->` indicates that an anonymous function is being generated.)
 
 
-This function along with the `f'` notation for automatic derivatives is defined in the `CalculusWithJulia` package.
+This function along with the `f'` notation for automatic derivatives is defined in the `CalculusWithJulia` package, though a bit differently:
+
+```{julia}
+tangent(sin, pi/4)
+```
 
 
 We make some graphs with tangent lines:
