--- a/quarto/derivatives/numeric_derivatives.qmd
+++ b/quarto/derivatives/numeric_derivatives.qmd
@@ -195,11 +195,10 @@ We pass in the function object, `k''`, and not the evaluated function.
 ## Recap on derivatives in Julia
 
 
-A quick summary for finding derivatives in `Julia`, as there are $3$ different manners:
-
+A quick summary of the $3$ different ways for finding derivatives in `Julia` presented in these notes:
 
   * Symbolic derivatives are found using `diff` from `SymPy`
-  * Automatic derivatives are found using the notation `f'` using `ForwardDiff.derivative`
+  * Automatic derivatives are found using the notation `f'` which utilizes `ForwardDiff.derivative`
   * approximate derivatives at a point, `c`, for a given `h` are found with `(f(c+h)-f(c))/h`.
 
 
