--- a/quarto/references.bib
+++ b/quarto/references.bib
@@ -63,3 +63,27 @@
   pages = {97–111},
   numpages = {15}
 }
+
+@book{doi:10.1137/1.9781611977165,
+author = {Trefethen, Lloyd N. and Bau, David},
+title = {Numerical Linear Algebra, Twenty-fifth Anniversary Edition},
+publisher = {Society for Industrial and Applied Mathematics},
+year = {2022},
+doi = {10.1137/1.9781611977165},
+address = {Philadelphia, PA},
+edition   = {},
+URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611977165},
+eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611977165}
+}
+
+@book{doi:10.1137/1.9781611975086,
+author = {Driscoll, Tobin A. and Braun, Richard J.},
+title = {Fundamentals of Numerical Computation},
+publisher = {Society for Industrial and Applied Mathematics},
+year = {2017},
+doi = {10.1137/1.9781611975086},
+address = {Philadelphia, PA},
+edition   = {Julia adaptation},
+URL = {https://tobydriscoll.net/fnc-julia/frontmatter.html},
+eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611975086}
+}
